Fixed fullscreen button z-index

--- a/app/assets/stylesheets/_markitup.css.scss
+++ b/app/assets/stylesheets/_markitup.css.scss
@@ -65,6 +65,7 @@
     position: fixed;
     right: 0;
     top: 30px;
+    z-index: 2;
   }
 
   .markItUpHeader {
@@ -124,7 +125,6 @@
     right: 0;
     top: 0;
     width: 50%;
-    z-index: 1;
   }
 
   .markItUpFooter {
